--- a/movieApp/angular.json
+++ b/movieApp/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "movieApp": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "movieApp"
+    }
+  },
+  "defaultProject": "movieApp",
+  "cli": {
+    "analytics": "10a98a8c-7499-45be-961e-59d481484804"
+  }
 }
